feat(pom) configuracion de plugin para units test por ci/cd